z-index fix for nav menu

--- a/css/main.scss
+++ b/css/main.scss
@@ -527,7 +527,7 @@ body {
   position: fixed;
   top: 50px;
   right: 50px;
-  z-index: 1;
+  z-index: 1000;
   -webkit-user-select: none;
   user-select: none;
 }
@@ -541,7 +541,7 @@ body {
   left: 0;
   cursor: pointer;
   opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
+  z-index: 1001; /* and place it over the hamburger */
 }
 
 /* Hamburger */
@@ -554,7 +554,7 @@ body {
   /* background: #cdcdcd; */
   background: #333;
   border-radius: 3px;
-  z-index: 1;
+  z-index: 1000;
   transform-origin: 4px 0px;
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),  background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),  opacity 0.55s ease;
 }
